test(us-01): add tests for scenarios #44, #45, #63, #64, #65, null and blank tool or date validations